--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,8 +22,22 @@ jobs:
     #### AUFGABE 2: SONAR
       # hier kommt die Konfiguration der Sonar-Analyse rein
   
-    - name: Compile, build and push
+    - name: Cache SonarCloud packages
+          uses: actions/cache@v1
+          with:
+              path: ~/.sonar/cache
+              key: ${{ runner.os }}-sonar
+              restore-keys: ${{ runner.os }}-sonar
+    - name: Cache Maven packages
+      uses: actions/cache@v1
+      with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+    - name: sonar analysis
       run: |
+        mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=azure_voting_service
+        
         #### AUFGABE 3 DOCKER BUILD UND PUSH
           # an dieser Stelle wird die Aufgabe 3 bearbeitet: heroku login, docker build, docker push
         
